Fixes framework config

--- a/mcaRecoveryPassword.xcodeproj/xcshareddata/xcschemes/mcaRecoveryPasswordUniversal.xcscheme
+++ b/mcaRecoveryPassword.xcodeproj/xcshareddata/xcschemes/mcaRecoveryPasswordUniversal.xcscheme
@@ -14,9 +14,9 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "1D1E496F21B5E61A007C61B1"
-               BuildableName = "mcaRecoveryPassword.framework"
-               BlueprintName = "mcaRecoveryPassword"
+               BlueprintIdentifier = "1D03791E21ECF63800F70AF5"
+               BuildableName = "mcaRecoveryPasswordUniversal"
+               BlueprintName = "mcaRecoveryPasswordUniversal"
                ReferencedContainer = "container:mcaRecoveryPassword.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
@@ -32,9 +32,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "1D1E496F21B5E61A007C61B1"
-            BuildableName = "mcaRecoveryPassword.framework"
-            BlueprintName = "mcaRecoveryPassword"
+            BlueprintIdentifier = "1D03791E21ECF63800F70AF5"
+            BuildableName = "mcaRecoveryPasswordUniversal"
+            BlueprintName = "mcaRecoveryPasswordUniversal"
             ReferencedContainer = "container:mcaRecoveryPassword.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -54,9 +54,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "1D1E496F21B5E61A007C61B1"
-            BuildableName = "mcaRecoveryPassword.framework"
-            BlueprintName = "mcaRecoveryPassword"
+            BlueprintIdentifier = "1D03791E21ECF63800F70AF5"
+            BuildableName = "mcaRecoveryPasswordUniversal"
+            BlueprintName = "mcaRecoveryPasswordUniversal"
             ReferencedContainer = "container:mcaRecoveryPassword.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
@@ -72,9 +72,9 @@
       <MacroExpansion>
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "1D1E496F21B5E61A007C61B1"
-            BuildableName = "mcaRecoveryPassword.framework"
-            BlueprintName = "mcaRecoveryPassword"
+            BlueprintIdentifier = "1D03791E21ECF63800F70AF5"
+            BuildableName = "mcaRecoveryPasswordUniversal"
+            BlueprintName = "mcaRecoveryPasswordUniversal"
             ReferencedContainer = "container:mcaRecoveryPassword.xcodeproj">
          </BuildableReference>
       </MacroExpansion>
